# home-page

./: .gitattributes  .gitignore  README.md  architecture.md  sonar-project.properties  Схема для Карины.md
.github/: dependabot.yml
.github/workflows/: backend.yml  bot.yml  frontend.yml  sonar.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_create_schemas_and_tables.py  002_fix_daily_menu_default_status.py  003_add_user_profile_fields.py  004_add_notifications_enabled.py  005_add_recipe_glyph.py  006_add_eschool_prs_id.py  007_drop_eschool_prs_id.py  008_drop_sessions_table.py  009_add_recipe_image_url.py  010_password_reset.py
backend/app/: main.py
backend/app/api/: auth.py  health.py  menus.py  password_reset.py  recipes.py
backend/app/core/: config.py  db.py  dependencies.py  security.py
backend/app/db/: base.py
backend/app/db/models/: __init__.py  menu.py  password_reset.py  recipe.py  user.py
backend/app/schemas/: auth.py  menu.py  recipe.py
backend/app/services/: auth.py  email.py  menu.py  password_reset.py  recipe.py  recipe_image.py  telegram.py
backend/tests/: conftest.py  test_admin_reset.py  test_auth.py  test_coverage_gaps.py  test_delivery.py  test_health.py  test_menus.py  test_password_reset.py  test_password_reset_api.py  test_profile_email.py  test_recipe_image.py  test_recipes.py  test_services_menu.py  test_telegram.py
bot/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
bot/app/: api_client.py  calendar_service.py  callbacks.py  config.py  helpers.py  main.py  notify.py  webserver.py
bot/app/eschool/: client.py  formatters.py  models.py  parser.py  service.py
bot/app/handlers/: __init__.py  menu.py  notifications.py  recipes.py  schedule.py  start.py  suggest.py  vote.py
bot/scripts/: check_eschool_cookies.py
bot/tests/: conftest.py  test_api_client.py  test_calendar_service.py  test_eschool_alerts.py  test_eschool_client.py  test_eschool_formatters.py  test_eschool_parser.py  test_eschool_service.py  test_handlers.py  test_handlers_more.py  test_main.py  test_notify.py  test_webserver.py  test_webserver_more.py
bot/tests/fixtures/: eschool_diary_sample.json
docs/: Plotnikov_Chto-nasha-zhizn-Eda-Kak-sdelat-svoyu-zhizn-vkusnoy-Recepty-dlya-neprofessionalov-i-shefov.ddzBWg.839252.fb2  api.md  architecture.md  eschool_api_research.md  eschool_decommission.md  eschool_telegram_research.md  knowledge_base.md  parse_recipes.py  recipes.json  sections.txt  testing.md  рецепты.json  рецепты_full.json
docs/superpowers/plans/: 2026-03-27-traefik-docker-compose.md  2026-04-14-telegram-bot.md
docs/superpowers/specs/: 2026-03-27-traefik-docker-compose-design.md  2026-04-14-telegram-bot-design.md
frontend/: .prettierrc  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx
frontend/src/api/: client.test.ts  client.ts  endpoints.test.ts  endpoints.ts  types.ts
frontend/src/components/: AuthAwareRoute.tsx  (+39 more)
infra/: prepare-vm.sh  reset-vm.sh  setup-wsl-ssh.sh
infra/ansible/: ansible.cfg
infra/docker/: .env.example  docker-compose.yml
knowledge/: alembic.ini  pyproject.toml
knowledge-mcp/: README.md  pyproject.toml
knowledge-mcp/src/knowledge_mcp/: client.py  config.py  server.py
knowledge-mcp/tests/: test_auth.py  test_client.py  test_config.py  test_e2e_smoke.py  test_server.py
knowledge/migrations/: env.py  script.py.mako
knowledge/migrations/versions/: 001_initial.py  002_notebooks.py  003_notes_with_fts.py  004_tags.py  005_note_links_and_view.py  006_role_and_grants.py
knowledge/models/: __init__.py  base.py  entities.py
knowledge/tests/: conftest.py  test_migrations.py  test_models.py
tools/: import_recipes.py  scrape_russianfood.py
tools/migrate_obsidian/: __main__.py  auth.py  client.py  migrate.py  parser.py  pyproject.toml  slugify.py
tools/migrate_obsidian/tests/: test_auth.py  test_client.py  test_migrate.py  test_parser.py  test_slugify.py
tools/migrate_obsidian/tests/fixtures/: simple.md  with_frontmatter.md  with_links_and_tags.md
tools/migrate_obsidian/tests/fixtures/vault/Personal/: Hello.md  Other.md
tools/tests/: conftest.py  test_import_recipes.py  test_scrape_russianfood.py
(+73 files in other folders)
