[project]
name = "home-page-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "pydantic-settings>=2.0",
    "alembic>=1.15",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "python-jose[cryptography]>=3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # длинные строки — line-length уже задан

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F403", "F405"]  # импорты для регистрации моделей
"app/db/models/__init__.py" = ["F401"]
"alembic/env.py" = ["F401", "F403", "F405", "E402"]
