[project]
name = "home-page-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.0",
    "uvicorn[standard]>=0.49.0",
    "sqlalchemy[asyncio]>=2.0.50",
    "asyncpg>=0.30",
    "pydantic-settings>=2.14.2",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0,<5.1",
    "python-jose[cryptography]>=3.5.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28.1",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.coverage.run]
concurrency = ["greenlet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # длинные строки — line-length уже задан

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F401", "F403", "F405", "I001"]
"tests/conftest.py" = ["E402", "F401", "F403", "F405"]
"app/db/models/__init__.py" = ["F401"]
"alembic/env.py" = ["F401", "F403", "F405", "E402"]
