[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-mcp"
version = "0.1.0"
description = "MCP server for personal knowledge base (Postgres + PostgREST)"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
knowledge-mcp = "knowledge_mcp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
