[project]
name = "knowledge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["knowledge", "knowledge.models", "knowledge.tests"]

[tool.setuptools.package-dir]
knowledge = "."
"knowledge.models" = "models"
"knowledge.tests" = "tests"
