[project]
name = "migrate-obsidian"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "python-frontmatter>=1.1",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["migrate_obsidian", "migrate_obsidian.tests"]

[tool.setuptools.package-dir]
migrate_obsidian = "."
"migrate_obsidian.tests" = "tests"
